[gd_scene load_steps=4 format=2]

[ext_resource path="res://room_AnimatedTexture.tscn" type="PackedScene" id=1]
[ext_resource path="res://room.gd" type="Script" id=3]
[ext_resource path="res://hud.tscn" type="PackedScene" id=4]

[node name="Room" type="Spatial"]
script = ExtResource( 3 )

[node name="RoomContainer" type="Node" parent="."]

[node name="Room_AnimatedTexture" parent="RoomContainer" instance=ExtResource( 1 )]

[node name="hud" parent="." instance=ExtResource( 4 )]
[connection signal="next" from="hud" to="." method="_on_hud_next"]
[connection signal="previous" from="hud" to="." method="_on_hud_previous"]
